Add confirm registration endpoint
